# KnowledgeBase

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  log.md  price.md  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 53cdbd2e163d_initial_dispatches_and_wiki_edits.py  808ca444d747_pages_and_join_tables.py  b72b13e7c9a1_add_canonical_memory_tables.py  c11f4e8a92db_allow_summary_review_status_null.py  c2d3e4f5a6b7_metrics_unique_date_type.py  d45ea2f6b7a0_add_db_canonical_operational_tables.py  e5f6a7b8c9d0_add_metrics_table.py  f1a2b3c4d5e6_allow_cli_revision_source.py
docs/: CLAUDE.md  README.md  architecture.md  commands.md  data-sync.md  db-canonical.md  frontmatter.md  handoff-system.md  hermes-sqlite-query-guide.md  pipeline.md  wiki-categories.md  workflows.md
docs/db_informations/: hermes-monitoring-guide.md  hermes-schema-reference.md  opencode-monitoring-guide.md  opencode-schema-reference.md  report-pipeline.md  state-db-schema-reference.md
docs/raw/: github_issue.md  gmail.md  ops_api.md  ops_cron.md  ops_ingest_state.md  ops_trace.md  source.md  web.md
docs/reference/: commands.md  frontmatter.md  wiki-categories.md
docs/workflows/: cron-jobs.md  handoff-system.md  periodic-memory-workflow.md  pipeline.md  usage-reports.md  wiki-approval-workflow.md
frontend/: .gitignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  AppShell.module.css  DashboardPage.module.css  DashboardPage.tsx  DecisionsPage.module.css  DecisionsPage.tsx  QueuePage.tsx  api.ts  dashboardApi.ts  dashboardFormat.ts  dashboardTypes.ts  feedback.ts  main.tsx  setupTests.ts  types.ts
scripts/: dev-web.sh  generate-wiki.py  graph_query.py  ingest-daily-papers.py  ingest-github.sh  kb_update.sh  lint-wiki.py  lint.sh  run_usage_daily_report.sh  setup-data-remote.sh
scripts/cron/: _db.sh  kb-claude-code-daily-report.sh  kb-cron-wrapup.sh  kb-hermes-daily-report.sh  kb-ingest-papers.sh  kb-memory-daily.sh  kb-memory-monthly.sh  kb-memory-weekly.sh  kb-opencode-daily-report.sh  kb-wiki-promote.sh  kb-wiki-ttl-sweep.sh
src/: CLAUDE.md
src/kb/: __init__.py
src/kb_mcp/: __init__.py  server.py
templates/: concept.md  decision.md  entity.md  handoff.md  handoff_execution.md  handoff_final.md  handoff_main_gateway.md  handoff_research.md  handoff_structuring.md  handoff_verification.md  improvement.md  raw-source.md  summary-daily_agent_usage.md
templates/handoff/: final.md
templates/raw/: github_claude_md.md  ops_cron.md  ops_decision.md  ops_run.md  (+1 more)
test/: conftest.py  test_cli_consumers.py  test_cli_data_dir.py  test_core_graph.py  test_core_ingest.py  test_cron_wrapup_sync.py  test_dashboard_contract.py  test_data_dir.py  test_data_sync_scripts.py  test_db_canonical_api.py  test_db_init.py  test_db_url.py  test_dispatch_repo.py  test_kanban_helpers.py  test_kanban_route.py  test_lint_cli.py  test_lint_handoff.py  test_lint_wiki.py  test_mcp_read_tools.py  test_mcp_server.py  test_mcp_validators.py  test_mcp_write_tools.py  test_migration_backfill.py  test_page_cli.py  test_page_core.py  test_page_fields.py  test_page_repo.py  test_page_serialize.py  test_pages_models.py  test_pages_schema.py  test_payloads.py  test_route_decisions.py  test_route_dispatches.py  test_route_pages.py  test_server.py  test_service_errors.py  test_service_handoffs.py  test_service_ops.py  test_service_pages.py  test_service_session.py  (+8 more)
wiki/: index.md
(+275 files in other folders)
