[project]
name = "knowledgebase"
version = "0.1.0"
description = "Personal LLM Wiki + lint tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "black>=26.3.1",
    "fastmcp>=3.2.4",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/kb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kb-lint = "kb.cli.lint:main"
kb-opencode-daily-report = "kb.cli.opencode_daily_report:main"
kb-hermes-daily-report = "kb.cli.hermes_daily_report:main"
kb-claude-code-daily-report = "kb.cli.claude_code_daily_report:main"
kb-submit-cron-run = "kb.cli.submit_cron_run:main"
kb-db-ttl-sweep = "kb.cli.db_ttl_sweep:main"
kb-mcp = "kb.mcp.server:main"
